--- a/draft.html
+++ b/draft.html
@@ -29,16 +29,48 @@
 
             .draftFigures img{
                 /*background: black;*/
-                height: 181px;
-                width: 130px;
+                height: 128px;
+                width: 95px;
             }
 
-            .draftFiguresOverlay{
-                pointer-events:none;
+            .playerDecks{
+                /*flex-direction: row;*/
+                width: 100%;
+                height: 800px;
+                margin: 10 10 10 10;
+                position: absolute;
             }
 
-            ul{
-                padding: 20px 20px 20px 20px;
+            .player1Deck{
+                background-color: rgb(208, 208, 208);
+                top: -100%;
+                left: 0%;
+                width: 200px;
+                height: 800px;
+                position: absolute;
+                flex-direction:column;
+            }
+
+            .player2Deck{
+                background-color: rgb(208, 208, 208);
+                top: -100%;
+                left: 100%;
+                width: 200px;
+                height: 800px;
+                transform: translate(-100%);
+                position: absolute;
+                flex-direction:column;
+            }
+
+            .deckFigures{
+                margin: 5 5 5 5;
+                width: 95%;
+                text-align: center;
+            }
+
+            .deckFigures img{
+                height: 128px;
+                width: 95px;
             }
 
             .beginningPopup{
@@ -50,8 +82,7 @@
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                text-align: center;
-                padding: 0px 20px 30px;
+                padding: 7px 5px 0px 5px;
                 position: absolute;
             }
 
@@ -73,6 +104,20 @@
                 <li class="draftBoxCar">esfse</li>
                 <li class="draftBoxCar">e</li>
             </ul>-->
+        </div>
+        <div class="playerDecks">
+            <div style="display: table-row">
+                <div class = "player1Deck" id = "player1Deck">
+                    <div class = "deckFigures" id = "deckFigures">
+                        <p>p1</p>
+                    </div>
+                </div>
+                <div class = "player2Deck" id = "player2Deck">
+                    <div class = "deckFigures" id = "deckFigures">
+                        <p>p2</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class= "beginningPopup" id= "beginningPopup">
             <p><button id= "player1Ready">Ready</button></p>
