--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tableturf Online Draft</title>
         <style>
             @font-face { font-family: Splatoon1; src: url("Splatoon1.otf"); } 
