--- a/public/index.html
+++ b/public/index.html
@@ -89,10 +89,10 @@
                 <p><button id="generateDraft">Generate Draft</button></p>
                 <div>
                     <h3>Draft link</h3>
-                    <h4 id="link" class="text-line"> Waiting...</h4>
+                    <h2 id="link" class="text-line"> Waiting...</h2>
                     <div>
-                        <button id="copyDraft">Copy</button>
-                        <button id="openDraft">Open</button>
+                        <button id="copyDraft" disabled>Copy</button>
+                        <button id="openDraft" disabled>Open</button>
                     </div>
                 </div>
             </div>
