--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tableturf Online Draft</title>
@@ -30,6 +30,12 @@
             }
             .openPopup{
                 visibility: visible;
+            }
+            .langBox{
+                top: 2%;
+                left: 90%;
+                text-align: center;
+                position: absolute;
             }
             h3 {
                 color: rgb(149, 149, 253);
@@ -80,6 +86,17 @@
             <p><button id="closeSettings">Close</button></p>
         </div>
         <div>
+            <!--
+            <div class="langBox">
+                <select class="form-select" onchange="ChangeLang()" id="languages" name="languages">
+                    <option value="en">languages</option>
+                    <option value="en">English</option>
+                    <option value="de">German - Deutsch</option>
+                    <option value="ja">Japanese - 日本語</option>
+                    <option value="sv">Swedish - svenska</option>
+                </select>
+            </div>
+            -->
             <div>
                 <h3>How to use</h3>
                 <p>- Choose draft settings</p>
