--- a/public/draft.html
+++ b/public/draft.html
@@ -214,6 +214,6 @@
             </div>
         </div>
     </body>
-    <script src="http://localhost:8080/socket.io/socket.io.js"></script>
+    <script src="http://85.228.196.253:8080/socket.io/socket.io.js"></script>
     <script src="draft.js"></script>
 </html>
