--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,6 @@
             h3 {
                 color: rgb(149, 149, 253);
             }
-
             div {
                 padding: 10px;
             }
@@ -109,8 +108,8 @@
             <div>
                 <h3>About</h3>
                 <p>Tableturf Online Draft is a tool for drafting cards in tableturf! 
-                    <br/>It will generate a random list of cards from which both players will take turns picking cards for their own decks.
-                <br/>When the draft is finished, create your decks ingame and start playing!
+                <br/>It will generate a random list of cards from which both players will take turns picking cards for their own decks.
+                <br/>When the draft is finished, create your decks and start playing!
                 <br><br>Created by Ljovynn</p>
             </div>
         </div>
