--- a/public/draft.html
+++ b/public/draft.html
@@ -6,7 +6,12 @@
         <style>
             header{
                 text-align: center;
+                padding: 0px 0px -10px 0px;
                 font-size: 1vw;
+            }
+
+            header h3{
+                margin: 0px 0px 0px 0px;
             }
 
             h3{
@@ -71,7 +76,7 @@
                 width: 100%;
                 top: 10px;
                 left: 0px;
-                height: 2vw;
+                height: 2.5vw;
                 pointer-events:none;
                 position: relative;
             }
@@ -87,18 +92,13 @@
                 width: 100%;
                 top: 10px;
                 left: 0px;
-                height: 3vw;
+                height: 2.8vw;
                 position: relative;
                 pointer-events:none;
             }
 
             .playerDeckSizeBox{
-                background-color: rgb(208, 208, 208);
-                top: 0%;
-                left: 0%;
                 width: 15.3vw;
-                height: 100%;
-                padding: 10px;
                 text-align: center;
                 position: absolute;
             }
@@ -122,7 +122,7 @@
 
             .beginningPopup{
                 background-color: rgb(241, 241, 241);
-                width: 370px;
+                width: 400px;
                 height: 200px;
                 text-align: center;
                 border-radius: 6px;
@@ -135,8 +135,8 @@
 
             .readyPopup{
                 background-color: rgb(241, 241, 241);
-                width: 370px;
-                height: 150px;
+                width: 400px;
+                height: 200px;
                 text-align: center;
                 border-radius: 6px;
                 top: 50%;
@@ -152,14 +152,33 @@
                 height: auto;
             }
 
+            .exportDeckPopup{
+                background-color: rgb(241, 241, 241);
+                width: 550px;
+                height: 270px;
+                text-align: center;
+                border-radius: 6px;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                padding: 7px 5px 0px 5px;
+                position: absolute;
+            }
+
             .hidePopup{
                 visibility: hidden;
+            }
+
+            .deckButtons{
+                display: inline;
+                margin: 0.5vw 1vw 0.5vw 1vw;
             }
         </style>
     </head>
     <body>
         <header>
             <h3 id="currentTurnMessage">Waiting for players to get ready</h3>
+            <h3 id="timer"> <br></h3>
         </header>
         <div class= "draftBox" id = "draftBox">
             <div class="draftFigures hidePopup" id="draftFigures">
@@ -181,10 +200,12 @@
         </div>
         <div class = "playerSortDeckContainer">
             <div class = "playerSortDeck" style = "left: 0%">
-                <button id="player1SortDeck">Sort by size</button>
+                <button id="player1SortDeck" class="deckButtons" disabled>Sort by size</button>
+                <button id="exportDeck1" class="deckButtons" disabled>Export deck</button>
             </div>
             <div class = "playerSortDeck" style= "transform: translate(-100%);left: 100%">
-                <button id="player2SortDeck">Sort by size</button>
+                <button id="player2SortDeck" class="deckButtons" disabled>Sort by size</button>
+                <button id="exportDeck2" class="deckButtons" disabled>Export deck</button>
             </div>
         </div>
         <div class = "playerDeckSizeBoxContainer">
@@ -201,6 +222,14 @@
                 <p><button style="margin: 0px 20px 0px 20px;" id= "player1Button">Player 1</button>
                 <button style="margin: 0px 20px 0px 20px;" id= "spectatorButton">Spectator</button>
                 <button style="margin: 0px 20px 0px 20px;" id= "player2Button">Player 2</button></p>
+            </div>
+        </div>
+        <div class= "exportDeckPopup hidePopup" id= "exportDeckPopup">
+            <h3>Export to Andrio Celos' Tableturf Simulator<br><br></h3>
+            <div>
+                <p id="code"><br><br></p>
+                <p><button style="margin: 30px 40px 10px 40px; display: inline;" id= "copyExportText">Copy</button>
+                <button style="margin: 30px 40px 10px 40px; display: inline;" id= "closeExportPopup">Close</button></p>
             </div>
         </div>
         <div class= "readyPopup hidePopup" id= "readyPopup">
