--- a/public/index.html
+++ b/public/index.html
@@ -72,9 +72,9 @@
             </div>
             <div>
                 <label for="Player1Name">Player 1 name:</label>
-                <input type="text" id="player1" name="Player 1 " value="Player 1"><br><br>
+                <input type="text" id="player1" name="Player1Name " value="Player 1"><br><br>
                 <label for="Player2Name">Player 2 name:</label>
-                <input type="text" id="player2" name="Player 2" value="Player 2">
+                <input type="text" id="player2" name="Player2Name" value="Player 2">
                 <p style="font-size: 13px">player positions will be randomized</p>
             </div>
                 <!--
