--- a/public/draft.html
+++ b/public/draft.html
@@ -77,6 +77,7 @@
                 top: 10px;
                 left: 0px;
                 height: 2.5vw;
+                text-align: center;
                 pointer-events:none;
                 position: relative;
             }
@@ -154,7 +155,20 @@
 
             .exportDeckPopup{
                 background-color: rgb(241, 241, 241);
-                width: 550px;
+                width: 580px;
+                height: 270px;
+                text-align: center;
+                border-radius: 6px;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                padding: 7px 5px 0px 5px;
+                position: absolute;
+            }
+
+            .optionsPopup{
+                background-color: rgb(241, 241, 241);
+                width: 400px;
                 height: 270px;
                 text-align: center;
                 border-radius: 6px;
@@ -203,6 +217,9 @@
                 <button id="player1SortDeck" class="deckButtons" disabled>Sort by size</button>
                 <button id="exportDeck1" class="deckButtons" disabled>Export deck</button>
             </div>
+            <div class = "playerSortDeck" style= "transform: translate(-50%);left: 50%">
+                <button id="options" class="deckButtons" disabled>Options </button>
+            </div>
             <div class = "playerSortDeck" style= "transform: translate(-100%);left: 100%">
                 <button id="player2SortDeck" class="deckButtons" disabled>Sort by size</button>
                 <button id="exportDeck2" class="deckButtons" disabled>Export deck</button>
@@ -225,7 +242,7 @@
             </div>
         </div>
         <div class= "exportDeckPopup hidePopup" id= "exportDeckPopup">
-            <h3>Export to Andrio Celos' Tableturf Simulator<br><br></h3>
+            <h3>Export deck to Andrio Celos' Tableturf Simulator<br>https://tableturf.andriocelos.net<br></h3>
             <div>
                 <p id="code"><br><br></p>
                 <p><button style="margin: 30px 40px 10px 40px; display: inline;" id= "copyExportText">Copy</button>
@@ -241,6 +258,23 @@
                 <img src="images/UI/X.png" alt="Checkmark" id= "player1Check">
                 <img src="images/UI/X.png" alt="Checkmark" id= "player2Check">
             </div>
+        </div>
+        <div class= "optionsPopup hidePopup" id= "optionsPopup">
+            <h3>Options<br></h3>
+            <div>
+                <label for="setSizeOrder">Deck sorting order:</label>
+                <select class="form-select" id="setSizeOrder" name="setSizeOrder">
+                    <option value="1">Large to small</option>
+                    <option value="2">Small to large</option>
+                </select><br><br>
+                <label for="set312Order">Special attack card sorting:</label>
+                <select class="form-select" id="set312Order" name="set312Order">
+                    <option value="1">Start</option>
+                    <option value="2">End</option>
+                    <option value="3">In sort</option>
+                </select><br><br><br>
+            </div>
+            <button id="closeOptions">Close</button>
         </div>
     </body>
     <script src="http://85.228.196.253:8080/socket.io/socket.io.js"></script>
