--- a/public/draft.html
+++ b/public/draft.html
@@ -262,6 +262,8 @@
         <div class= "optionsPopup hidePopup" id= "optionsPopup">
             <h3>Options<br></h3>
             <div>
+                <label for="muteAudio">Mute audio</label>
+                <input type="checkbox" id="muteAudioCheckbox" name="muteAudio"><br><br>
                 <label for="setSizeOrder">Deck sorting order:</label>
                 <select class="form-select" id="setSizeOrder" name="setSizeOrder">
                     <option value="1">Large to small</option>
