--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
             <h3>How to use</h3>
             <p>- Choose draft settings</p>
             <p>- Click on "Generate draft"</p>
-            <p>- Open the link, and give it to your opponent <br/><br/></p>
+            <p>- Open the link, and give it to your opponent <br/></p>
             <h3>Draft settings</h2>
             <div>
                 <label for="draftSize">Number of cards in draft (30-209):</label>
@@ -96,15 +96,26 @@
                 <label for="312Size">Minimum number of special attack cards: (0-17)</label>
                 <input type="number" id="312Size" name="312Size" min="0" max="17" value="3">  
             </div>
+            <div>
+                <label for="timer">Timer:</label>
+                    <select name="timer" id="timerList">
+                    <option value="0">None</option>
+                    <option value="10">10 seconds</option>
+                    <option value="20">20 seconds</option>
+                    <option value="30">30 seconds</option>
+                    <option value="40">40 seconds</option>
+                    <option value="50">50 seconds</option>
+                    <option value="60">1 minute</option>
+                    <option value="120">2 minutes</option>
+                    </select>
+            </div>
             <p><button id="generateDraft">Generate Draft</button></p>
-                <div>
-                    <h3>Draft link</h3>
-                    <h2 id="link" class="text-line"> <br></h2>
-                    <div>
-                        <button id="copyDraft" disabled>Copy</button>
-                        <button id="openDraft" disabled>Open</button>
-                    </div>
-                </div>
+            <h3>Draft link</h3>
+            <h2 id="link" class="text-line"> <br></h2>
+            <div>
+                <button id="copyDraft" disabled>Copy</button>
+                <button id="openDraft" disabled>Open</button>
+            </div>
             <div>
                 <h3>About</h3>
                 <p>Tableturf Online Draft is a tool for drafting cards in tableturf! 
