--- a/public/index.html
+++ b/public/index.html
@@ -15,26 +15,25 @@
                 font-family:Arial, Helvetica, sans-serif;
                 text-align: center;
             }
-            .popup {
+            .optionsPopup{
+                background-color: rgb(241, 241, 241);
                 width: 400px;
-                height: 300px;
-                background: rgb(241, 241, 241);
-                position: absolute;
+                height: 270px;
+                text-align: center;
                 border-radius: 6px;
-                top: 36%;
+                top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                text-align: center;
-                padding: 0px 20px 30px;
+                padding: 7px 5px 0px 5px;
+                position: absolute;
                 visibility: hidden;
             }
             .openPopup{
                 visibility: visible;
             }
-            .langBox{
+            .optionsButton{
                 top: 2%;
                 left: 90%;
-                text-align: center;
                 position: absolute;
             }
             h3 {
@@ -107,7 +106,7 @@
                     <option value="50">50 seconds</option>
                     <option value="60">1 minute</option>
                     <option value="120">2 minutes</option>
-                    </select>
+                </select>
             </div>
             <p><button id="generateDraft">Generate Draft</button></p>
             <h3>Draft link</h3>
@@ -122,6 +121,26 @@
                 <br/>It will generate a random list of cards from which both players will take turns picking cards for their own decks.
                 <br/>When the draft is finished, create your decks and start playing!
                 <br><br>Created by Ljovynn</p>
+            </div>
+            <button class="optionsButton" id="options">Options</button>
+            <div class="optionsPopup" id="optionsPopup">
+                <h3>Options<br></h3>
+                <div>
+                    <label for="muteAudio">Mute audio</label>
+                    <input type="checkbox" id="muteAudioCheckbox" name="muteAudio"><br><br>
+                    <label for="setSizeOrder">Deck sorting order:</label>
+                    <select class="form-select" id="setSizeOrder" name="setSizeOrder">
+                        <option value="1">Large to small</option>
+                        <option value="2">Small to large</option>
+                    </select><br><br>
+                    <label for="set312Order">Special attack card sorting:</label>
+                    <select class="form-select" id="set312Order" name="set312Order">
+                        <option value="1">Start</option>
+                        <option value="2">End</option>
+                        <option value="3">In sort</option>
+                    </select><br><br><br>
+                </div>
+                <button id="closeOptions">Close</button>
             </div>
         </div>
     <script src="index.js"></script>
