--- a/public/draft.html
+++ b/public/draft.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
         <title>Draft</title>
         <style>
             header{
@@ -27,7 +31,6 @@
             }
 
             .draftBox{
-                background-color: rgb(208, 208, 208);
                 margin: 0 auto;
                 display:flex;
                 flex-direction:column;
@@ -63,7 +66,6 @@
             }
 
             .playerDeck{
-                background-color: rgb(208, 208, 208);
                 top: 0%;
                 width: 15.3vw;
                 height: 100%;
@@ -122,7 +124,6 @@
             }
 
             .beginningPopup{
-                background-color: rgb(241, 241, 241);
                 width: 400px;
                 height: 200px;
                 text-align: center;
@@ -135,7 +136,6 @@
             }
 
             .readyPopup{
-                background-color: rgb(241, 241, 241);
                 width: 400px;
                 height: 200px;
                 text-align: center;
@@ -154,7 +154,6 @@
             }
 
             .exportDeckPopup{
-                background-color: rgb(241, 241, 241);
                 width: 580px;
                 height: 270px;
                 text-align: center;
@@ -167,9 +166,8 @@
             }
 
             .optionsPopup{
-                background-color: rgb(241, 241, 241);
                 width: 400px;
-                height: 270px;
+                height: 320px;
                 text-align: center;
                 border-radius: 6px;
                 top: 50%;
@@ -187,25 +185,61 @@
                 display: inline;
                 margin: 0.5vw 1vw 0.5vw 1vw;
             }
+            .lightMode{
+                background: rgb(255, 255, 255);
+            }
+            .darkMode{
+                background: rgb(27, 27, 27);
+            }
+            .lightMode p{
+                color: rgb(22, 22, 22);
+            }
+            .darkMode p{
+                color: rgb(255, 255, 255);
+            }
+            .lightMode label{
+                color: rgb(22, 22, 22);
+            }
+            .darkMode label{
+                color: rgb(255, 255, 255);
+            }
+            .lightMode h3{
+                color: rgb(22, 22, 22);
+            }
+            .darkMode h3{
+                color: rgb(255, 255, 255);
+            }
+            .lightMode .secondaryBackgroundColor{
+                background-color: rgb(231, 231, 231);
+            }
+            .darkMode .secondaryBackgroundColor{
+                background-color: rgb(74, 74, 74);
+            }
+            .lightMode .thirdBackgroundColor{
+                background-color: rgb(248, 248, 248);
+            }
+            .darkMode .thirdBackgroundColor{
+                background-color: rgb(55, 55, 55);
+            }
         </style>
     </head>
-    <body>
+    <body class="body hidePopup lightMode">
         <header>
             <h3 id="currentTurnMessage">Waiting for players to get ready</h3>
             <h3 id="timer"> <br></h3>
         </header>
-        <div class= "draftBox" id = "draftBox">
+        <div class= "draftBox thirdBackgroundColor" id = "draftBox">
             <div class="draftFigures hidePopup" id="draftFigures">
             </div>
         </div>
         <div class="playerDecks">
-            <div class = "playerDeck" id = "player1Deck" style="left: 0%">
+            <div class = "playerDeck thirdBackgroundColor" id = "player1Deck" style="left: 0%">
                 <h3 style="text-align: center;font-size:1vw" id="player1Title">Player 1</h3>
                 <div class = "deckFigures hidePopup" id = "deck1Figures">
                     
                 </div>
             </div>
-            <div class = "playerDeck" id = "player2Deck" style= "transform: translate(-100%);left: 100%">
+            <div class = "playerDeck thirdBackgroundColor" id = "player2Deck" style= "transform: translate(-100%);left: 100%">
                 <h3 style="text-align: center;font-size:1vw" id="player2Title">Player 2</h3>
                 <div class = "deckFigures hidePopup" id = "deck2Figures">
                     
@@ -214,15 +248,15 @@
         </div>
         <div class = "playerSortDeckContainer">
             <div class = "playerSortDeck" style = "left: 0%">
-                <button id="player1SortDeck" class="deckButtons" disabled>Sort by size</button>
-                <button id="exportDeck1" class="deckButtons" disabled>Export deck</button>
+                <button id="player1SortDeck" class="deckButtons" data-key="sortBySize" disabled>Sort by size</button>
+                <button id="exportDeck1" class="deckButtons" data-key="exportDeck" disabled>Export deck</button>
             </div>
             <div class = "playerSortDeck" style= "transform: translate(-50%);left: 50%">
-                <button id="options" class="deckButtons" disabled>Options </button>
+                <button id="options" class="deckButtons" data-key="options" disabled>Options </button>
             </div>
             <div class = "playerSortDeck" style= "transform: translate(-100%);left: 100%">
-                <button id="player2SortDeck" class="deckButtons" disabled>Sort by size</button>
-                <button id="exportDeck2" class="deckButtons" disabled>Export deck</button>
+                <button id="player2SortDeck" class="deckButtons" data-key="sortBySize" disabled>Sort by size</button>
+                <button id="exportDeck2" class="deckButtons" data-key="exportDeck" disabled>Export deck</button>
             </div>
         </div>
         <div class = "playerDeckSizeBoxContainer">
@@ -233,52 +267,62 @@
                 <h3 id="player2DeckSize">Size: 0</h3>
             </div>
         </div>
-        <div class= "beginningPopup" id= "beginningPopup">
-            <h3>Who are you?<br><br></h3>
+        <div class= "beginningPopup secondaryBackgroundColor" id= "beginningPopup">
+            <h3 data-key="whoAreYou">Who are you?<br><br></h3>
             <div>
                 <p><button style="margin: 0px 20px 0px 20px;" id= "player1Button">Player 1</button>
-                <button style="margin: 0px 20px 0px 20px;" id= "spectatorButton">Spectator</button>
+                <button style="margin: 0px 20px 0px 20px;" id= "spectatorButton" data-key="spectator">Spectator</button>
                 <button style="margin: 0px 20px 0px 20px;" id= "player2Button">Player 2</button></p>
             </div>
         </div>
-        <div class= "exportDeckPopup hidePopup" id= "exportDeckPopup">
-            <h3>Export deck to Andrio Celos' Tableturf Simulator<br>https://tableturf.andriocelos.net<br></h3>
+        <div class= "exportDeckPopup hidePopup secondaryBackgroundColor" id= "exportDeckPopup">
+            <h3 data-key="exportDeckText">Export deck to Andrio Celos' Tableturf Simulator</h3>
+            <h3 style="margin: -20px 0px 0px 0px;">https://tableturf.andriocelos.net</h3>
             <div>
                 <p id="code"><br><br></p>
-                <p><button style="margin: 30px 40px 10px 40px; display: inline;" id= "copyExportText">Copy</button>
-                <button style="margin: 30px 40px 10px 40px; display: inline;" id= "closeExportPopup">Close</button></p>
+                <p><button style="margin: 30px 40px 10px 40px; display: inline;" id= "copyExportText" data-key="copy" disabled>Copy</button>
+                <button style="margin: 30px 40px 10px 40px; display: inline;" id= "closeExportPopup" data-key="close">Close</button></p>
             </div>
         </div>
-        <div class= "readyPopup hidePopup" id= "readyPopup">
+        <div class= "readyPopup hidePopup secondaryBackgroundColor" id= "readyPopup">
             <div>
-                <p><button style="margin: 0px 20px 0px 20px;" id= "player1Ready" disabled>Ready</button>
-                <button style="margin: 0px 20px 0px 20px;" id= "player2Ready" disabled>Ready</button></p>
+                <p><button style="margin: 0px 20px 0px 20px;" id= "player1Ready" data-key="ready" disabled>Ready</button>
+                <button style="margin: 0px 20px 0px 20px;" id= "player2Ready" data-key="ready" disabled>Ready</button></p>
             </div>
             <div>
                 <img src="images/UI/X.png" alt="Checkmark" id= "player1Check">
                 <img src="images/UI/X.png" alt="Checkmark" id= "player2Check">
             </div>
         </div>
-        <div class= "optionsPopup hidePopup" id= "optionsPopup">
-            <h3>Options<br></h3>
+        <div class= "optionsPopup hidePopup secondaryBackgroundColor" id= "optionsPopup">
+            <h3 data-key="options">Options<br></h3>
             <div>
-                <label for="muteAudio">Mute audio</label>
+                <label for="muteAudio" data-key="muteAudio"></label>
                 <input type="checkbox" id="muteAudioCheckbox" name="muteAudio"><br><br>
-                <label for="setSizeOrder">Deck sorting order:</label>
+                <label for="setSizeOrder" data-key="deckSortingOrder"></label>
                 <select class="form-select" id="setSizeOrder" name="setSizeOrder">
-                    <option value="1">Large to small</option>
-                    <option value="2">Small to large</option>
+                    <option value="1" data-key="largeToSmall"></option>
+                    <option value="2" data-key="smallToLarge"></option>
                 </select><br><br>
-                <label for="set312Order">Special attack card sorting:</label>
+                <label for="set312Order" data-key="312Sorting"></label>
                 <select class="form-select" id="set312Order" name="set312Order">
-                    <option value="1">Start</option>
-                    <option value="2">End</option>
-                    <option value="3">In sort</option>
-                </select><br><br><br>
+                    <option value="1" data-key="start"></option>
+                    <option value="2" data-key="end"></option>
+                    <option value="3" data-key="inSort"></option>
+                </select><br><br>
+                <label for="languages" data-key="language"></label>
+                <select class="form-select" id="languages" name="languages">
+                    <option value="en">English</option>
+                    <!--<option value="de">Deutsch</option>
+                    <option value="ja">日本語</option>-->
+                    <option value="sv">Svenska</option>
+                </select><br><br>
+                <label for="darkMode" data-key="darkMode"></label>
+                <input type="checkbox" id="darkModeCheckbox" name="darkMode"><br><br>
             </div>
-            <button id="closeOptions">Close</button>
+            <button id="closeOptions" data-key="close">Close</button>
         </div>
     </body>
-    <script src="http://85.228.196.253:8080/socket.io/socket.io.js"></script>
+    <script src="http://85.228.196.253:80/socket.io/socket.io.js"></script>
     <script src="draft.js"></script>
 </html>
