--- a/public/index.html
+++ b/public/index.html
@@ -113,92 +113,90 @@
         </div>         
         <img src="images/UI/LanguageIcon.jpg" alt="languageIcon" class="languageIcon">   
         <main class="main">
-            <h3 data-key="howToUse">SOMETHING WENT WRONG</h3>
-            <p data-key="chooseDraftSettings"></p>
-            <p data-key="clickOnGenerateDraft"></p>
-            <p data-key="openLinkGiveToOpponent"></p>
+            <h3 data-key="howToUse">Hot to use</h3>
+            <p data-key="chooseDraftSettings">1. Choose draft settings</p>
+            <p data-key="clickOnGenerateDraft">2. Click on "Generate draft"</p>
+            <p data-key="openLinkGiveToOpponent">3. Open the link, give it to your opponent</p>
             <p data-key="share"><br/></p>
-            <h3 data-key="draftSettings"></h2>
+            <h3 data-key="draftSettings">Draft settings</h2>
             <div>
-                <label for="draftSize" data-key="numberOfCardsInDraft"></label>
+                <label for="draftSize" data-key="numberOfCardsInDraft">Number of cards in draft (0-209):</label>
                 <input type="number" id="draftSize" name="draftSize" min="30" max="209" value="60">  
             </div>
             <div>
-                <label for="Player1Name" data-key="player1Name"></label>
+                <label for="Player1Name" data-key="player1Name">Player 1 name:</label>
                 <input type="text" id="player1" name="Player1Name " value="Player 1"><br><br>
-                <label for="Player2Name" data-key="player2Name"></label>
+                <label for="Player2Name" data-key="player2Name">Player 2 name:</label>
                 <input type="text" id="player2" name="Player2Name" value="Player 2">
-                <p style="font-size: 13px" data-key="playerPositionsRandomized"></p>
+                <p style="font-size: 13px" data-key="playerPositionsRandomized">Player positions will be randomized</p>
             </div>
-                <!--
-                <div>
-                    <label for="maps">Map:</label>
-                    <select name="selectMaps" id="maps">
-                    <option value="Main Street">Main Street</option>
-                    <option value="Thunder Point">Thunder Point</option>
-                    <option value="X Marks the Garden">X Marks the Garden</option>
-                    <option value="Square Squared">Square Squared</option>
-                    <option value="Lakefront Property">Lakefront Property</option>
-                    <option value="Double Gemini">Double Gemini</option>
-                    <option value="River Drift">River Drift</option>
-                    <option value="Box Seats">Box Seats</option>
-                    </select>
-                </div>
-                -->
             <div>
-                <label for="312Size" data-key="312Size"></label>
+                <label for="312Size" data-key="312Size">Minimum number of special attack cards (0-17):</label>
                 <input type="number" id="312Size" name="312Size" min="0" max="17" value="4">  
             </div>
             <div>
-                <label for="timer" data-key="timer"></label>
+                <label for="timer" data-key="timer">Timer:</label>
                     <select name="timer" id="timerList">
-                    <option value="0" data-key="none"></option>
-                    <option value="10" data-key="10"></option>
-                    <option value="20" data-key="20"></option>
-                    <option value="30" data-key="30"></option>
-                    <option value="40" data-key="40"></option>
-                    <option value="50" data-key="50"></option>
-                    <option value="60" data-key="60"></option>
-                    <option value="120" data-key="120"></option>
+                    <option value="0" data-key="none">None</option>
+                    <option value="10" data-key="10">10 seconds</option>
+                    <option value="20" data-key="20">20 seconds</option>
+                    <option value="30" data-key="30">30 seconds</option>
+                    <option value="40" data-key="40">40 seconds</option>
+                    <option value="50" data-key="50">50 seconds</option>
+                    <option value="60" data-key="60">1 minute</option>
+                    <option value="120" data-key="120">2 minutes</option>
                 </select>
             </div>
-            <p><button id="generateDraft" data-key="generateDraft"></button></p>
-            <h3 data-key="draftLink"></h3>
+            <div>
+                <label for="stages" data-key="stage">Stage:</label>
+                <select name="selectStages" id="stages">
+                <option value="0" data-key="undefined">Undefined</option>
+                <option value="1" data-key="mainStreet">Main Street</option>
+                <option value="2" data-key="thunderPoint">Thunder Point</option>
+                <option value="3" data-key="xMarksTheGarden">X Marks the Garden</option>
+                <option value="4" data-key="squareSquared">Square Squared</option>
+                <option value="5" data-key="lakefrontProperty">Lakefront Property</option>
+                <option value="6" data-key="doubleGemini">Double Gemini</option>
+                <option value="7" data-key="riverDrift">River Drift</option>
+                <option value="8" data-key="boxSeats">Box Seats</option>
+                </select>
+            </div>
+            <p><button id="generateDraft" data-key="generateDraft">Generate draft</button></p>
+            <h3 data-key="draftLink">Draft link</h3>
             <h2 id="link" class="text-line"> <br></h2>
             <div>
-                <!--<button id="copyDraft" data-key="copy" disabled></button>-->
-                <button id="openDraft" data-key="open" disabled></button>
+                <!--<button id="copyDraft" data-key="copy" disabled>Copy</button>-->
+                <button id="openDraft" data-key="open" disabled>Open</button>
             </div>
             <div>
-                <h3 data-key="about"></h3>
-                <p data-key="aboutParagraph1"></p>
-                <p data-key="aboutParagraph2"></p>
-                <p data-key="aboutParagraph3"></p>
-                <br>
-                <p data-key="createdByLjovynn"></p>
+                <h3 data-key="about">About</h3>
+                <p data-key="aboutParagraph1">Tableturf Online Draft is a tool for drafting cards in Tableturf!</p>
+                <p data-key="aboutParagraph2">It will first generate a random list of cards. Then, both players will take turns picking cards for their own decks.</p>
+                <p data-key="aboutParagraph3">When the draft is finished, create your decks and start playing!</p>
+                <p data-key="createdByLjovynn">Created by Ljovynn</p>
             </div>
-            <button class="optionsButton" id="options" data-key="options"></button>
+            <button class="optionsButton" id="options" data-key="options">Options</button>
             <div class="optionsPopup secondaryBackgroundColor" id="optionsPopup">
-                <h3 data-key="options"><br></h3>
+                <h3 data-key="options">Options<br></h3>
                 <div>
-                    <label for="muteAudio" data-key="muteAudio"></label>
+                    <label for="muteAudio" data-key="muteAudio">Mute audio</label>
                     <input type="checkbox" id="muteAudioCheckbox" name="muteAudio"><br><br>
-                    <label for="setSizeOrder" data-key="deckSortingOrder"></label>
+                    <label for="setSizeOrder" data-key="deckSortingOrder">Deck sorting order:</label>
                     <select class="form-select" id="setSizeOrder" name="setSizeOrder">
-                        <option value="1" data-key="largeToSmall"></option>
-                        <option value="2" data-key="smallToLarge"></option>
+                        <option value="1" data-key="largeToSmall">Large to small</option>
+                        <option value="2" data-key="smallToLarge">Small to large</option>
                     </select><br><br>
-                    <label for="set312Order" data-key="312Sorting"></label>
+                    <label for="set312Order" data-key="312Sorting">Special attack card sorting:</label>
                     <select class="form-select" id="set312Order" name="set312Order">
-                        <option value="1" data-key="start"></option>
-                        <option value="2" data-key="end"></option>
-                        <option value="3" data-key="inSort"></option>
+                        <option value="1" data-key="start">Start</option>
+                        <option value="2" data-key="end">End</option>
+                        <option value="3" data-key="inSort">In sort</option>
                     </select><br><br>
-                    <label for="darkMode" data-key="darkMode"></label>
+                    <label for="darkMode" data-key="darkMode">Dark mode</label>
                     <input type="checkbox" id="darkModeCheckbox" name="darkMode"><br>
                     <br>
                 </div>
-                <button id="closeOptions" data-key="close"></button>
+                <button id="closeOptions" data-key="close">Close</button>
             </div>
         </main>
     <script>src="langData.js"</script>
