--- a/public/draft.html
+++ b/public/draft.html
@@ -246,7 +246,10 @@
     <body class="body hidePopup lightMode">
         <header>
             <h3 id="currentTurnMessage" data-key="waitingForPlayers"></h3>
-            <h3 id="timer"> <br></h3>
+            <div>
+                <h3 id="timer"> <br></h3>
+                <button class="hidePopup" id="backToHomepage" data-key="back" style="position: absolute;transform: translate(-50%, -2vw);left: 50%">Back</button>
+            </div>
         </header>
         <div class= "draftBox thirdBackgroundColor" id = "draftBox">
             <div class="draftFigures hidePopup" id="draftFigures">
