Added cards from drizzle season

--- a/public/draft.html
+++ b/public/draft.html
@@ -325,7 +325,7 @@
         <div class= "optionsPopup hidePopup secondaryBackgroundColor" id= "optionsPopup">
             <h3 data-key="options">Options<br></h3>
             <div>
-                <label for="muteAudio" data-key="muteAudio">Mute audio</label>
+                <label for="muteAudioCheckbox" data-key="muteAudio">Mute audio</label>
                 <input type="checkbox" id="muteAudioCheckbox" name="muteAudio"><br><br>
                 <label for="setSizeOrder" data-key="deckSortingOrder">Deck sorting order:</label>
                 <select class="form-select" id="setSizeOrder" name="setSizeOrder">
@@ -345,7 +345,7 @@
                     <option value="ja">日本語</option>
                     <option value="sv">Svenska</option>
                 </select><br><br>
-                <label for="darkMode" data-key="darkMode">Dark mode</label>
+                <label for="darkModeCheckbox" data-key="darkMode">Dark mode</label>
                 <input type="checkbox" id="darkModeCheckbox" name="darkMode"><br><br>
             </div>
             <button id="closeOptions" data-key="close">Close</button>
