--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
         <link rel="manifest" href="/site.webmanifest">
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <meta name="title" property="og:title" content="Tableturf Online Draft"/>
+		<meta name="description" property="og:description" content="A tool for drafting decks against your opponent in Tableturf Battles!"/>
+		<meta property="og:url" content="https://tableturfdraft.se/"/>
+		<meta name="theme-color" content="#0c92f2" data-react-helmet="true"/>
         <title>Tableturf Online Draft</title>
         <style>
             @font-face { font-family: Splatoon1; src: url("Splatoon1.otf"); } 
@@ -125,8 +130,8 @@
             <p data-key="share"><br/></p>
             <h3 data-key="draftSettings">Draft settings</h2>
             <div>
-                <label for="draftSize" data-key="numberOfCardsInDraft">Number of cards in draft (0-221):</label>
-                <input type="number" id="draftSize" name="draftSize" min="30" max="221" value="60">  
+                <label for="draftSize" data-key="numberOfCardsInDraft">Number of cards in draft (0-232):</label>
+                <input type="number" id="draftSize" name="draftSize" min="30" max="232" value="60">  
             </div>
             <div>
                 <label for="player1" data-key="player1Name">Player 1 name:</label>
@@ -136,8 +141,8 @@
                 <p style="font-size: 13px" data-key="playerPositionsRandomized">Player positions will be randomized</p>
             </div>
             <div>
-                <label for="312Size" data-key="312Size">Minimum number of special attack cards (0-17):</label>
-                <input type="number" id="312Size" name="312Size" min="0" max="17" value="4">  
+                <label for="312Size" data-key="312Size">Minimum number of special attack cards (0-19):</label>
+                <input type="number" id="312Size" name="312Size" min="0" max="19" value="4">  
             </div>
             <div>
                 <label for="timerList" data-key="timer">Timer:</label>
