updated for fresh season 2024
new stages and cards

--- a/public/index.html
+++ b/public/index.html
@@ -130,8 +130,8 @@
             <p data-key="share"><br/></p>
             <h3 data-key="draftSettings">Draft settings</h2>
             <div>
-                <label for="draftSize" data-key="numberOfCardsInDraft">Number of cards in draft (0-232):</label>
-                <input type="number" id="draftSize" name="draftSize" min="30" max="232" value="60">  
+                <label for="draftSize" data-key="numberOfCardsInDraft">Number of cards in draft (0-252):</label>
+                <input type="number" id="draftSize" name="draftSize" min="30" max="252" value="60">  
             </div>
             <div>
                 <label for="player1" data-key="player1Name">Player 1 name:</label>
@@ -169,6 +169,13 @@
                 <option value="6" data-key="doubleGemini">Double Gemini</option>
                 <option value="7" data-key="riverDrift">River Drift</option>
                 <option value="8" data-key="boxSeats">Box Seats</option>
+                <option value="9" data-key="girderForBattle">Girder for Battle</option>
+                <option value="10" data-key="maskMansion">Mask Mansion</option>
+                <option value="11" data-key="stickyThicket">Sticky Thicket</option>
+                <option value="12" data-key="crackerSnap">Cracker Snap</option>
+                <option value="13" data-key="twoLaneSplattop">Two-Lane Splattop</option>
+                <option value="14" data-key="pedalToTheMetal">Pedal to the Metal</option>
+                <option value="15" data-key="overTheLine">Over the Line</option>
                 </select>
             </div>
             <!-- Comment in / out this patch of code in CSS to toggle allowing unreleased cards
